# wtf

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  clang-format-all
examples/: main.c
include/: MacroUtils.h  Matrix.h  Quaternion.h  QuaternionImpl.h  Rotation.h  Transformation.h  Types.h  TypesFwd.h  Vector.h  VectorImpl.h  Wtf.h
include/types/: MatrixType.h  PointType.h  QuaternionType.h  TransformationType.h  VectorType.h
scripts/: do_tests.sh
src/: MathUtils.c  MathUtils.h  MathUtilsTest.c  Matrix.c  Matrix.h  MatrixTest.c  MinTest.h  Quaternion.c  Quaternion.h  QuaternionTest.c  QuaternionType.h  Quaternions.c  Quaternions.h  QuaternionsTest.c  Rotation.c  Rotation.h  RotationTest.c  RotationType.h  Rotations.c  Rotations.h  RotationsTest.c  ScalarType.h  Transformation.c  Transformations.h  Types.h  Vector.c  Vector.h  VectorTest.c  Vectors.c  Vectors.h  VectorsTest.c  quaternions.c  quaternions.h
src/types/: MatrixType.h  RotationType.h  VectorType.h
test/: MathUtilsTest.c  MatrixTest.c  QuaternionTest.c  RotationTest.c  VectorTest.c
